--- a/Infrastructure/deploymentconfig.json
+++ b/Infrastructure/deploymentconfig.json
@@ -1,10 +1,10 @@
 
-{"bussie-backend": {
-  "image": ":bussie.bussie-backend.latest",
+{"django": {
+  "image": ":django.django.latest",
   "ports": {"8000": "HTTP", "80": "HTTP"}
 },
 "bussie-redis-cache": {
-  "image": "redis/redis-stack-server:latest",
-  "ports": {"6379": "HTTP"}
+  "image": "postgres:latest",
+  "ports": {"5432": "HTTP"}
 }
 }
