--- a/Infrastructure/deploymentconfig.json
+++ b/Infrastructure/deploymentconfig.json
@@ -3,7 +3,7 @@
   "image": ":django.django.latest",
   "ports": {"8000": "HTTP", "80": "HTTP"}
 },
-"bussie-redis-cache": {
+"postgres-database": {
   "image": "postgres:latest",
   "ports": {"5432": "HTTP"}
 }
