--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           aws lightsail push-container-image \
             --region ${{ env.AWS_REGION }} \
             --service-name ${service_name} \
-            --label Django \
+            --label django \
             --image django-backend:latest
       - name: 🚀 Deploying the containers to the Amazon datacenter
         run: |
