--- a/Infrastructure/deploymentconfig.json
+++ b/Infrastructure/deploymentconfig.json
@@ -1,6 +1,6 @@
 
 {"django": {
-  "image": ":djangolightsaildockerpostgres.djangolightsaildockerpostgres:latest",
+  "image": ":django.django:latest",
   "ports": {"8000": "HTTP", "80": "HTTP"}
 },
 "postgres-database": {
