--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: 🐳 Create a Docker Container for Backend
-        run: docker build -t django-backend:latest .
+        run: docker build -t django:latest .
       - name: 📬 Upload Backend image to AWS container register
         run: |
           service_name=${{ env.AWS_LIGHTSAIL_SERVICE_NAME }}
@@ -42,10 +42,10 @@ jobs:
             --region ${{ env.AWS_REGION }} \
             --service-name ${service_name} \
             --label django \
-            --image django-backend:latest
+            --image django:latest
       - name: 🚀 Deploying the containers to the Amazon datacenter
         run: |
-          aws lightsail create-container-service-deployment --service-name django \
+          aws lightsail create-container-service-deployment --service-name ${service_name} \
             --containers file://Infrastructure/deploymentconfig.json \
             --public-endpoint file://Infrastructure/publicendpoint.json
       - name: =========== All done. Cleaning up ♻️  ===========
