--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
             --image django:latest
       - name: 🚀 Deploying the containers to the Amazon datacenter
         run: |
-          aws lightsail create-container-service-deployment --service-name ${service_name} \
+          aws lightsail create-container-service-deployment --service-name ${{service_name}} \
             --containers file://Infrastructure/deploymentconfig.json \
             --public-endpoint file://Infrastructure/publicendpoint.json
       - name: =========== All done. Cleaning up ♻️  ===========
