plain vanilla with port 8000

--- a/Infrastructure/deploymentconfig.json
+++ b/Infrastructure/deploymentconfig.json
@@ -2,5 +2,9 @@
 {"django": {
   "image": ":django.django.latest",
   "ports": {"8000": "HTTP", "80": "HTTP"}
+},
+"postgres": {
+  "image": "postgres:latest",
+  "ports": {"5432": "HTTP"}
 }
 }
